[metadata]
name = cost_curve
version = 0.0.1
author = Junyao Cui, Weijie Sun, Sunil Kalmady Vasu
author_email = junyao1@ualberta.ca, weijie2@ualberta.ca, kalmady@ualberta.ca
description = Cost curve classifier package. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Lospub/cost_curve_package
project_urls =
    Bug Tracker = https://github.com/Lospub/cost_curve_package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src